--- a/public/static/web/css/styles.css
+++ b/public/static/web/css/styles.css
@@ -17631,3 +17631,5 @@ ul.list-menu li a:before {
     max-width: 100%;
     max-height: 100%
 }
+
+.content-home ul, .content-home ol{padding-left: 30px;}
